--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79ebf0">  <td>24/01/18 22:44:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.banking.testCases.TC_AddCustomerTest_003@be68757]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1175418534</td>   <td></td> </tr>
-<tr bgcolor="91876e">  <td>24/01/18 22:44:10</td>   <td>2537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.banking.testCases.TC_AddCustomerTest_003@be68757]">addNewCustomer</td> 
-  <td>main@1175418534</td>   <td></td> </tr>
-<tr bgcolor="79ebf0">  <td>24/01/18 22:44:13</td>   <td>5033</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.banking.testCases.TC_AddCustomerTest_003@be68757]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1175418534</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>24/01/19 20:19:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String,java.lang.String)[pri:0, instance:com.banking.testCases.TC_LoginDDT_002@76a4ebf2]">loginDDT</td> 
+  <td>main@192428201</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>24/01/19 20:19:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String,java.lang.String)[pri:0, instance:com.banking.testCases.TC_LoginDDT_002@76a4ebf2]">loginDDT</td> 
+  <td>main@192428201</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>24/01/19 20:19:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String,java.lang.String)[pri:0, instance:com.banking.testCases.TC_LoginDDT_002@76a4ebf2]">loginDDT</td> 
+  <td>main@192428201</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>24/01/19 20:19:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String,java.lang.String)[pri:0, instance:com.banking.testCases.TC_LoginDDT_002@76a4ebf2]">loginDDT</td> 
+  <td>main@192428201</td>   <td></td> </tr>
+<tr bgcolor="bfa075">  <td>24/01/19 20:19:36</td>   <td>8144</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.banking.testCases.TC_LoginDDT_002@76a4ebf2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@192428201</td>   <td></td> </tr>
+<tr bgcolor="bfa075">  <td>24/01/19 20:19:06</td>   <td>-21314</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.banking.testCases.TC_LoginDDT_002@76a4ebf2]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@192428201</td>   <td></td> </tr>
 </table>
